attempted to fix burger menu, and less white space for rush card

--- a/wikiclue/src/styles/componentStyles/headerBarStyles.css
+++ b/wikiclue/src/styles/componentStyles/headerBarStyles.css
@@ -63,6 +63,7 @@ button:hover {
 	padding-left: 1rem;
 	padding-right: 1rem;
 	margin-right: 1rem;
+	position: absolute;
 }
 
 .burger-menu-items {
@@ -84,6 +85,8 @@ button:hover {
 	width: 100%;
 	text-align: center;
 	font-size: 1rem;
+	position: absolute;
+
 }
 
 .burger-menu-items button {
@@ -95,6 +98,8 @@ button:hover {
 	width: 100%;
 	text-align: center;
 	font-size: 1rem;
+	position: absolute;
+
 }
 
 .burger-menu-items a:hover,
