--- a/wikiclue/src/styles/updateRushPageStyles.css
+++ b/wikiclue/src/styles/updateRushPageStyles.css
@@ -19,8 +19,8 @@
 	justify-content: center;
 	background: var(--card-background);
 	padding: 20px;
-	width: 400px;
-	height: 500px;
+	width: 300px;
+	height: 400px;
 	box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
 }
 
